pp2/samples/tested/matrix.decaf.test

*** Error line 16.
	   Print(Get(i,j), "\t");
                      ^
*** syntax error

